test/test-data/unit/gino-loader.test
[case testLoader]
from typing import TYPE_CHECKING, Any
from gino import Gino
from gino.crud import CRUDModel
from datetime import datetime

db = Gino()

if TYPE_CHECKING:
    Base = CRUDModel
else:
    Base = db.Model

class Model(Base):
    __tablename__ = 'model'

    id = db.Column(db.Integer(), primary_key=True)
    created_at = db.Column(db.DateTime())

class Child(Base):
    parent: Model

    __tablename__ = 'child'

    id = db.Column(db.Integer(), primary_key=True)
    parent_id = db.Column(db.Integer(), db.ForeignKey('model.id'))

async def main() -> None:
    children = await Child.load(parent=Model).query.gino.all()
    reveal_type(children)  # E: Revealed type is 'builtins.list*[main.Child*]'
[out]
